--- a/index.html
+++ b/index.html
@@ -9,29 +9,33 @@
   <body>
     <form novalidate>
       <div>
-        <label for="">Full name: </label>
-        <input type="text">
+        <label for="name">Full name: </label>
+        <input type="text" id="name" name="full_name" pattern="((\w+)\s){1,3}(\w+)" required>
       </div>
       <div>
-        <label for="">Year of birth: </label>
-        <input type="date">
+        <label for="age">Age: </label>
+        <input type="number" id="age" name="user_age" min="18" max="25" required>
       </div>
       <div>
-        <label for="">Post code: </label>
-        <input type="text">
+        <label for="post_code">Post code: </label>
+        <input type="text" id="post_code" name="user_post_code" pattern="(([A-Z]){2}\W)(\d){4}" required>
       </div>
       <div>
-        <label for="">Email: </label>
-        <input type="email">
+        <label for="mail">Email: </label>
+        <input type="email" id="mail" name="user_email" required>
       </div>
       <div>
-        <label for="">Password: </label>
-        <input type="password">
+        <label for="pass2">Password: </label>
+        <input type="password" id="pass2"pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$" required>
       </div>
       <div>
-        <label for="">Password confirm: </label>
-        <input type="password">
+        <label for="pass">Password confirmation: </label>
+        <input type="password" id="pass" name="user_pass" pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$" required>
       </div>
+      <button>
+        High five!
+      </button>
       </form>
+      <script src="script.js"></script>
   </body>
 </html>
